--- a/src/klavotools/complexityPanel.scss
+++ b/src/klavotools/complexityPanel.scss
@@ -1,12 +1,22 @@
 @import "../data/variables";
 @import "../animations";
+@import "../mixins";
+
 #complexity-panel {
-  width: 300px !important;
-  border-radius: 5px !important;
+  width: 300px;
+  border-radius: 0 5px 5px 0 !important;
   background: $black !important;
-  border: 1px solid $gray !important;
-  opacity: 0.2;
-  transition: opacity 0.2s ease-in-out !important;
+  transition: opacity 0.15s ease-in-out !important;
+  position: absolute;
+  top: 120px; // Default position, before application of media queries
+
+  @media (max-width: 1360px) {
+    @include collapsible-panel(
+      $order: 2,
+      $icon: "percent",
+      $icon-color: $lightblue
+    );
+  }
 
   &:hover {
     opacity: 1;
