--- a/src/klavotools/complexityPanel.scss
+++ b/src/klavotools/complexityPanel.scss
@@ -11,21 +11,41 @@
   top: 120px;
   // overflow: hidden !important;
 
+  &:hover {
+    opacity: 1;
+  }
+
   @media (max-width: 1350px) {
     width: 100px;
     height: 50px;
+
+    // Consolidated display none selectors
     #complexity-pre-calc,
-    #complexity-calc #input-language,
-    #complexity-calc #spectrumCanvas {
+    #input-language,
+    #spectrumCanvas {
       display: none !important;
     }
-    #complexity-calc #complexity-calc-inner {
-      font-size: 0 !important;
-    }
-  }
 
-  &:hover {
-    opacity: 1;
+    // Font size overrides for spans
+    #complexity-calc-inner {
+      font-size: 0 !important;
+
+      span[style*="color:#333"] {
+        font-size: 22px !important;
+      }
+
+      span[style*="color:#666"] {
+        font-size: 20px !important;
+      }
+    }
+
+    @media (max-width: 970px) {
+      @include collapsible-panel(
+        $order: 2,
+        $icon: "percent",
+        $icon-color: $lightblue
+      );
+    }
   }
 
   #statistics {
@@ -36,29 +56,21 @@
     padding: 0 !important;
     @include flex-layout(column, center, center);
 
-    #complexity-pre-calc {
-    }
-
     #complexity-calc {
       #complexity-calc-inner {
         span[style*="color:#333"] {
           color: $lightblue !important;
-          @media (max-width: 1350px) {
-            font-size: 22px !important;
-          }
         }
 
         span[style*="color:#666"] {
           color: $blue !important;
-          @media (max-width: 1350px) {
-            font-size: 20px !important;
-          }
         }
 
         #spectrumCanvas {
           margin: 10px 0 !important;
           border-radius: 5px !important;
           overflow: hidden !important;
+
           canvas {
             height: 25px !important;
             width: 280px !important;
