--- a/src/data/_raster.scss
+++ b/src/data/_raster.scss
@@ -3,6 +3,7 @@ $virtualKeyboard: url("https://i.imgur.com/CVbMpI4.png");
 
 // Speed panel background image for speed and error monitoring
 $speedPanel: url("https://i.imgur.com/Qg4ztHC.png");
+$newSpeedPanel: url("https://i.imgur.com/c3CG7QV.png");
 
 // Award images for achievements
 $medal-award: url("https://i.imgur.com/JDhJqcC.png");
