Enhance styling and functionality in garbage and race SCSS files
- Updated garbage.scss to include additional elements for display none, improving the organization of race settings and speed panel styles.
- Introduced a neon text effect mixin in race.scss for enhanced visual appeal.
- Applied neon effects to speed and error labels in the speed panel, improving readability and aesthetics.
- Adjusted positioning and styling of speed panel elements for better alignment and visual consistency.

--- a/src/garbage.scss
+++ b/src/garbage.scss
@@ -1,9 +1,16 @@
+// Globally
 .ownbanner-back,
 #reformal_tab,
 #footer,
 .feedback,
 #test,
-#playads {
+// Race settings panel
+#playads,
+// Race speed panel
+#speedpanel-back,
+#speedpanel-back-dark,
+#speedpanel-top,
+#speedpanel-arrow {
   display: none !important;
 }
 // Remove background images from container corners
