--- a/src/race/race.scss
+++ b/src/race/race.scss
@@ -2,6 +2,19 @@
 @import "gameSettings";
 @import "../mixins";
 
+// Neon text effect mixin
+// $color: The base color for the neon effect
+// $glow-size: Controls the size/spread of the glow effect (1 = normal, 2 = double size, 0.5 = half size)
+@mixin neon-text($color, $glow-size: 1) {
+  color: $color !important;
+  text-shadow: 0 0 (5px * $glow-size) rgba($color, 0.8),
+    0 0 (10px * $glow-size) rgba($color, 0.6),
+    0 0 (15px * $glow-size) rgba($color, 0.4),
+    0 0 (20px * $glow-size) rgba($color, 0.3),
+    0 0 (35px * $glow-size) rgba($color, 0.2),
+    0 0 (40px * $glow-size) rgba($color, 0.1) !important;
+}
+
 // Main wrapper container
 #content .play-wrapper {
   // Play overall table container
@@ -13,35 +26,34 @@
         // Remove margin to do more space around
         margin: 0 !important;
 
-        // Speedpanel styling
+        // Speedpanel styling with neon effects
         #speedpanel {
-          // Change img speedpanel night mode
           #speedpanel-canvas {
             box-sizing: border-box !important;
             padding-left: 262px !important;
             height: 87px !important;
             width: 262px !important;
-            background: $speedPanel !important;
-          }
-
-          #speed-label,
-          #errors-label {
-            color: $lightblue !important;
+            background: transparent $newSpeedPanel no-repeat right center /
+              contain !important;
           }
 
           #speed-label {
-            top: 60px !important;
+            top: 59px !important;
+            right: 130px !important;
+            font: 600 16px "Montserrat", sans-serif !important;
+
+            // Apply neon effect with the existing color
+            @include neon-text(lighten($lightblue, 15%), 0.8);
           }
 
           #errors-label {
+            width: 60px !important;
+            right: 18px !important;
             top: 35px !important;
-          }
+            font: 600 24px "Montserrat", sans-serif !important;
 
-          // Remove unused elements
-          #speedpanel-back,
-          #speedpanel-top,
-          #speedpanel-arrow {
-            display: none !important;
+            // Apply neon effect with the existing color
+            @include neon-text(lighten($red, 15%), 1);
           }
         }
 
@@ -675,4 +687,3 @@ $rotation-snap: cubic-bezier(
     filter: brightness(0.8) hue-rotate(0);
   }
 }
-
