Refactor styles and update speed panel visuals
- Updated speed panel background image and added a new image for speed panel digits.
- Adjusted positioning of the speed panel arrow in main.js for better alignment.
- Increased the height of the speed panel arrow SVG for improved visibility.
- Modified mixins to enforce z-index and added a border to expanded elements.
- Removed unused neon text effect mixin from race.scss and adjusted styles for speed panel and labels for consistency.

--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -208,6 +208,7 @@
   $content-transition-duration: 0.3s,
   $content-transition-delay: 0.05s
 ) {
+  z-index: 100 !important;
   margin: 0 !important;
   padding: 0 !important;
   border-radius: 0 5px 5px 0 !important;
@@ -243,6 +244,8 @@
     width: $expanded-width !important;
     height: auto !important;
     background: $background !important;
+    border: 2px solid $blue !important;
+    border-left-width: 0 !important;
 
     & * {
       opacity: 1 !important;
