--- a/src/data/_raster.scss
+++ b/src/data/_raster.scss
@@ -2,8 +2,8 @@
 $virtualKeyboard: url("https://i.imgur.com/CVbMpI4.png");
 
 // Speed panel background image for speed and error monitoring
-$speedPanel: url("https://i.imgur.com/Qg4ztHC.png");
-$newSpeedPanel: url("https://i.imgur.com/c3CG7QV.png");
+$speedPanel: url("https://i.imgur.com/c3CG7QV.png");
+$speedPanelDigitsPlace: url("https://i.imgur.com/TveD9ms.png");
 
 // Award images for achievements
 $medal-award: url("https://i.imgur.com/JDhJqcC.png");
