--- a/src/main.scss
+++ b/src/main.scss
@@ -86,3 +86,4 @@
 @import "./klavotools/complexityPanel";
 @import "./klavotools/ignoreList";
 @import "./klavotools/recentGames";
+@import "./klavotools/chatToBBCode.scss";
