--- a/src/popupDialogue.scss
+++ b/src/popupDialogue.scss
@@ -19,6 +19,7 @@
 
   textarea {
     width: 100% !important;
+    min-width: 300px !important;
     resize: vertical !important;
     background-color: $black !important;
     padding: 0.5em !important;
@@ -31,9 +32,21 @@
     margin: 0 0 1em !important;
   }
 
-  .btn {
+  .btn,
+  input[type="button"] {
     margin: 0 0.5em !important;
+    padding: 6px 12px !important;
+    border-radius: 3px !important;
     height: 30px !important;
     line-height: 15px !important;
+    border: none !important;
+    outline: none !important;
+    color: $black !important;
+    background: $gray !important;
+    transition: color 0.15s ease-in-out, background 0.15s ease-in-out !important;
+
+    &:hover {
+      background: $blue !important;
+    }
   }
 }
