--- a/src/forum/_postsList.scss
+++ b/src/forum/_postsList.scss
@@ -197,13 +197,26 @@
             }
 
             .text {
-              img.linked-image:not([src*="smilies/"]) {
+              img.linked-image:not([src*="smilies/"]):not(img[src*="avatars/"]) {
                 animation: fadeIn 0.5s ease-in-out;
                 filter: brightness(0.5) !important;
                 transition: filter 0.1s ease-in-out;
 
                 &:hover {
                   filter: brightness(1) !important;
+                }
+              }
+
+              // Prevents user avatars from being displayed at excessive sizes when formatted in forum post content
+              img[src*="avatars/"] {
+                max-width: 24px !important;
+                border-radius: 3px !important;
+                transform-origin: left bottom;
+                cursor: pointer !important;
+                transition: transform 0.15s ease-in-out !important;
+
+                &:hover {
+                  transform: scale(3) !important;
                 }
               }
             }
