Enhance gametype-voc styling in race.scss
- Added z-index to improve stacking context.
- Introduced hover effect for gametype-voc links to enhance user interaction.
- Applied transition for smoother color change on hover.

--- a/src/race/race.scss
+++ b/src/race/race.scss
@@ -83,6 +83,18 @@
             vertical-align: middle !important;
             padding-bottom: 0 !important;
             color: $white !important;
+            z-index: 20 !important;
+
+            .gametype-voc {
+              a {
+                color: $gametype-voc !important;
+                transition: color 0.15s ease-in-out !important;
+
+                &:hover {
+                  color: lighten($gametype-voc, 10%) !important;
+                }
+              }
+            }
           }
 
           #status-inner {
