--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -89,12 +89,18 @@
   }
 }
 
-@mixin anchor-to-button($font-size: 16px, $width: fit-content) {
+@mixin anchor-to-button(
+  $font-size: 16px,
+  $width: fit-content,
+  $color: $black,
+  $background-color: $gray,
+  $background-hover: $blue
+) {
   @include flex-layout(row, start, center);
   cursor: pointer !important;
   text-decoration: none !important;
-  color: $black !important;
-  background: $gray !important;
+  color: $color !important;
+  background: $background-color !important;
   min-height: 30px !important;
   width: $width !important;
   border-radius: 5px !important;
@@ -104,7 +110,7 @@
   transition: background 0.1s ease-in-out;
 
   &:hover {
-    background: $blue !important;
+    background: $background-hover !important;
   }
 }
 
