--- a/src/floating-navigation.scss
+++ b/src/floating-navigation.scss
@@ -69,6 +69,7 @@
         align-items: center !important;
         justify-content: center !important;
         color: $black !important;
+        white-space: nowrap !important;
       }
 
       sub {
