--- a/src/data/_raster.scss
+++ b/src/data/_raster.scss
@@ -77,3 +77,7 @@ $backEnglishKeyboard: url("https://i.imgur.com/pzB4kEl.png");
 $foreEnglishKeyboard: url("https://i.imgur.com/cNTXVxU.png");
 // Shift keys
 $shiftKey: url("https://i.imgur.com/alP9Hh6.png");
+
+// ===== ABOUT PAGE (PREMIUM) =====
+$diagrams: url("https://i.imgur.com/LIjfxXL.png");
+$premiumCheck: url("https://i.imgur.com/1dDdZ1j.png");
