Add premium button styles and new background image for buy premium button
- Updated the about.scss file to include a new background image for the buy premium button.
- Introduced a new variable for the buy premium image in _raster.scss.

--- a/src/about.scss
+++ b/src/about.scss
@@ -239,6 +239,10 @@ $tablet-breakpoint: 1100px;
   // ===== PREMIUM =====
   .btn_buy_premium_bg {
     background: $darkgray !important;
+
+    .btn_buy_premium {
+      background-image: $buyPremium !important;
+    }
   }
 
   img[src*="digramms"] {
