--- a/src/data/_raster.scss
+++ b/src/data/_raster.scss
@@ -81,3 +81,4 @@ $shiftKey: url("https://i.imgur.com/alP9Hh6.png");
 // ===== ABOUT PAGE (PREMIUM) =====
 $diagrams: url("https://i.imgur.com/LIjfxXL.png");
 $premiumCheck: url("https://i.imgur.com/1dDdZ1j.png");
+$buyPremium: url("https://i.imgur.com/Ntly0I5.png");
